<resources>
    <string name="app_name">Aapathon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="photo">Photo</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="camera">Camera</string>
    <string name="recycler_view">Recycler View</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_pic_description">Profile Picture of the User</string>
    <string name="call_sms">Call Sms</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="hint_phone_number">1234567890</string>
    <string name="hint_sms">Hii!!</string>
    <string name="google_maps">Google Maps</string>
    <string name="submit">Submit</string>
    <string name="notification_text">This is a simple Notification text</string>
    <string name="sample_time">10 (sec)</string>
    <string name="time">Time</string>
    <string name="send_notification">Send Notification</string>
</resources>
