<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_tab_layout"
            android:title="@string/tab_layout" />
        <item
            android:id="@+id/nav_google_signin"
            android:title="@string/google_sign_in" />
        <item
            android:id="@+id/nav_call_sms"
            android:title="@string/call_sms" />
        <item
            android:id="@+id/nav_maps"
            android:title="@string/google_maps" />
        <item
            android:id="@+id/nav_send"
            android:title="@string/send_notification" />
    </group>
</menu>
