<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/hint_phone_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call" />

    <EditText
        android:id="@+id/sms_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/hint_sms"
        android:inputType="textShortMessage" />

    <Button
        android:id="@+id/btn_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sms" />
</LinearLayout>
