<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/notification_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/sample_time"
        android:inputType="time" />

    <EditText
        android:id="@+id/notification_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/title"
        android:inputType="text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/notification_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:hint="@string/notification_text"
        android:inputType="text" />

    <Button
        android:id="@+id/notification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/submit" />
</LinearLayout>